# windows-ipc-project

./: README.md
client/: CMakeLists.txt  README.md  main.cpp
client/include/: debug_module.h
client/source/: SmartHandle.cpp  debug_module.cpp
server/: CMakeLists.txt  README.md  main.cpp
server/include/: DataObject.h  SmartHandle.h
